--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Link de estilos css-->
+    <link rel="stylesheet" href="./assets/style/main.css">
     <title>AluraGeek</title>
 </head>
 <body>
     <header>
         <div>
-            <img src="#" alt="logo">
-            <label for="search"><input type="search" name="search" id="search" placeholder="¿Que deseas buscar?">lupa</label>
+            <img src="./assets/images/Logo.png" alt="logo">
+            <label for="search"><input type="search" name="search" id="search" placeholder="¿Que deseas buscar?"><img src="./assets/images/lupa.png" alt="lupa"></label>
             <button>Login</button>
         </div>
     </header>
-    <section>
-        <div>
-            <h1>Febrero Promocional</h1>
-            <h3>Productos seleccionados con 33</h3>
-            <button>Ver Consola</button>
+    <section class="banner">
+        <div class="banner__text">
+            <h1 class="banner__text__title">Febrero Promocional</h1>
+            <h3 class="banner__text__decription">Productos seleccionados con 33% de descuento</h3>
+            <button class="banner__text__button">Ver Consola</button>
         </div>
     </section>
     <main>
@@ -29,7 +31,7 @@
             </div>
             <div>
                 <div>
-                    <img src="#" alt="">
+                    <img src="./assets/images/ProductosSW/producto__star__wars--1.png" alt="image-product-star-wars">
                     <div>
                         <p>Producto XYZ</p>
                         <p>$60.00</p>
@@ -37,7 +39,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="#" alt="">
+                    <img src="./assets/images/ProductosSW/producto__star__wars--2.png" alt="image-product-star-wars">
                     <div>
                         <p>Producto XYZ</p>
                         <p>$60.00</p>
@@ -45,7 +47,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="#" alt="">
+                    <img src="./assets/images/ProductosSW/producto__star__wars--3.png" alt="image-product-star-wars">
                     <div>
                         <p>Producto XYZ</p>
                         <p>$60.00</p>
@@ -53,7 +55,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="#" alt="">
+                    <img src="./assets/images/ProductosSW/producto__star__wars--4.png" alt="image-product-star-wars">
                     <div>
                         <p>Producto XYZ</p>
                         <p>$60.00</p>
@@ -61,7 +63,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="#" alt="">
+                    <img src="./assets/images/ProductosSW/producto__star__wars--5.png" alt="image-product-star-wars">
                     <div>
                         <p>Producto XYZ</p>
                         <p>$60.00</p>
@@ -69,7 +71,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="#" alt="">
+                    <img src="./assets/images/ProductosSW/producto__star__wars--6.png" alt="image-product-star-wars">
                     <div>
                         <p>Producto XYZ</p>
                         <p>$60.00</p>
@@ -85,7 +87,7 @@
             </div>
             <div>
                 <div>
-                    <img src="#" alt="">
+                    <img src="./assets/images/ProductoConsola/producto__control__consola--1.png" alt="image-control-consolegame">
                     <div>
                         <p>Control XYZ</p>
                         <p>$60.00</p>
@@ -93,7 +95,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="#" alt="">
+                    <img src="./assets/images/ProductoConsola/producto__control__consola--2.png" alt="image-control-consolegame">
                     <div>
                         <p>Control y consola XYZ</p>
                         <p>$60.00</p>
@@ -101,7 +103,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="#" alt="">
+                    <img src="./assets/images/ProductoConsola/producto__control__consola--3.png" alt="image-control-consolegame">
                     <div>
                         <p>Consola XYZ</p>
                         <p>$60.00</p>
@@ -109,7 +111,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="#" alt="">
+                    <img src="./assets/images/ProductoConsola/producto__control__consola--4.png" alt="image-control-consolegame">
                     <div>
                         <p>Control XYZ</p>
                         <p>$60.00</p>
@@ -117,7 +119,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="#" alt="">
+                    <img src="./assets/images/ProductoConsola/producto__control__consola--5.png" alt="image-control-consolegame">
                     <div>
                         <p>Control XYZ</p>
                         <p>$60.00</p>
@@ -125,7 +127,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="#" alt="">
+                    <img src="./assets/images/ProductoConsola/producto__control__consola--6.png" alt="image-control-consolegame">
                     <div>
                         <p>Game Boy Color</p>
                         <p>$60.00</p>
@@ -141,7 +143,7 @@
             </div>
             <div>
                 <div>
-                    <img src="#" alt="">
+                    <img src="./assets/images/ProductoDiveros/producto__diverso--1.png" alt="image-product-diverso">
                     <div>
                         <p>Camisa Atari</p>
                         <p>$60.00</p>
@@ -149,7 +151,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="#" alt="">
+                    <img src="./assets/images/ProductoDiveros/producto__diverso--2.png" alt="image-product-diverso">
                     <div>
                         <p>Camisa SNES</p>
                         <p>$60.00</p>
@@ -157,7 +159,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="#" alt="">
+                    <img src="./assets/images/ProductoDiveros/producto__diverso--3.png" alt="image-product-diverso">
                     <div>
                         <p>Control y consola XYZ</p>
                         <p>$60.00</p>
@@ -165,7 +167,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="#" alt="">
+                    <img src="./assets/images/ProductoDiveros/producto__diverso--4.png" alt="image-product-diverso">
                     <div>
                         <p>Control y consola XYZ</p>
                         <p>$60.00</p>
@@ -173,7 +175,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="#" alt="">
+                    <img src="./assets/images/ProductoDiveros/producto__diverso--5.png" alt="image-product-diverso">
                     <div>
                         <p>Control y consola XYZ</p>
                         <p>$60.00</p>
@@ -181,7 +183,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="#" alt="">
+                    <img src="./assets/images/ProductoDiveros/producto__diverso--6.png" alt="image-product-diverso">
                     <div>
                         <p>Producto XYZ</p>
                         <p>$60.00</p>
@@ -194,7 +196,9 @@
     <footer>
         <div>
             <div>
-                <div>iamgen de logo</div>
+                <div>
+                    <img src="./assets/images/Logo.png">
+                </div>
                 <ul>
                     <li>Quienes Somos</li>
                     <li>Politicas de Privacidad</li>
@@ -213,8 +217,9 @@
             </div>
         </div>
         <div>
-            Desarrollado por Matias Gabriel Ortega 2022
+            &copy;Desarrollado por Matias Gabriel Ortega 2022
         </div>
     </footer>
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
