agregando css al header y banner

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <title>AluraGeek</title>
 </head>
 <body>
-    <header>
-        <div>
-            <img src="./assets/images/Logo.png" alt="logo">
-            <label for="search"><input type="search" name="search" id="search" placeholder="¿Que deseas buscar?"><img src="./assets/images/lupa.png" alt="lupa"></label>
-            <button>Login</button>
+    <header class="header">
+        <img class="header__logo" src="./assets/images/Logo.png" alt="logo">
+        <div class="header__search_and_login">
+            <label class="header__search" for="search"><input type="search" name="search" id="search" placeholder="¿Que deseas buscar?"><img src="./assets/images/lupa.png" alt="lupa"></label>
+            <button class="header__button__login">Login</button>
         </div>
     </header>
     <section class="banner">
         <div class="banner__text">
-            <h1 class="banner__text__title">Febrero Promocional</h1>
-            <h3 class="banner__text__decription">Productos seleccionados con 33% de descuento</h3>
-            <button class="banner__text__button">Ver Consola</button>
+            <h1 class="banner__title">Febrero Promocional</h1>
+            <h3 class="banner__decription">Productos seleccionados con 33% de descuento</h3>
+            <button class="banner__button">Ver Consola</button>
         </div>
     </section>
     <main>
